<resources>
    <string name="app_name">Pop News</string>
    <string name="share_app_menu">Share App</string>
    <string name="about_us">About Us</string>
    <string name="LinkedinLinkText">LinkedIn.com/rajkamani</string>
    <string name="github_com_link">github.com/rajkamani</string>
    <string name="AboutME">Hi Users ! I am Android Enthusiastic. Follow for More App like this.</string>
    <string name="DevName">Rajdeep Kamani</string>
    <string name="DevTag">Developed By - </string>
    <string name="imageDES">Image</string>
    <string name="nullvalue">Not Provided | Go to Full article</string>

    <!-- Tab Name of Tablayout-->
    <string name="Tab_home">Home</string>
    <string name="tab_business">Business</string>
    <string name="tab_tech">Technology</string>
    <string name="tab_entertain">Entertainment</string>
    <string name="tab_sport">Sports</string>
    <string name="tab_science">Science</string>/
    <string name="tab_health">Health</string>
    <string name="appVersion">Version 2.0</string>
    <string name="splash_logo">Splash Logo</string>
</resources>